MicroK8s/nginx-front-app-node-affinity.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-front-app-svc
  labels:
    app: nginx-front-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: nginx-front-app
  type: ClusterIP
  sessionAffinity: None
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: nginx-front-app
spec:
  selector:
    matchLabels:
      app: nginx-front-app # has to match .spec.template.metadata.labels
  serviceName: "nginx-front-app-svc"
  replicas: 3 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: nginx-front-app # has to match .spec.selector.matchLabels
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: zone
                operator: In
                values:
                 - infra
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001      
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx-front-app
        image: docker.io/mrdojojo/nginx-hello-app:1.1-arm64
        ports:
        - containerPort: 8080
          name: nginx-front-app
        volumeMounts:
        - name: nginx-front-app-pvc
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: nginx-front-app-pvc
      labels:
        app: nginx-front-app
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "mayastor"
      resources:
        requests:
          storage: 10Gi
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-front-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/rewrite-target: /   
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
  - host: "demo.microk8s.hhii.ampere" 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-front-app-svc
            port:
              number: 8080
